<resources>

    <string name="app_name">LifeManager</string>
    <string name="curr_usr_name">Default</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">DayDayUp</string>
    <string name="activity_history_time">View Time</string>
    <string name="activity_history_mood">View Mood</string>
    <string name="activity_history_dayly">Daily</string>
    <string name="activity_history_weekly">Weekly</string>
    <string name="activity_history_monthly">Monthly</string>
    <string name="back">Back</string>
    <string name="suggestion">Suggestion</string>
    <string name="act_main_txtvw_logStarted">Next Record Time: </string>
    <string name="act_main_txtvw_logStarted_en">Next Record Time</string>
    <string name="act_main_txtvw_logStopped">Timely Record Off</string>
     <string name="act_main_txtvw_logStopped_en">Timely Record Off</string>
    <string name="act_main_txtvw_nextLogTime">  00:00  </string>
    <string name="act_main_btn_iWantToRcd">Make a record Now</string>
    <string name="act_main_btn_iWantToRcd_en">Make a record Now</string>
    <string name="act_main_btn_history">History Record</string>
     <string name="act_main_btn_history_en">History Record</string>
    <string name="act_main_btn_future">Future Plan</string>
    <string name="act_main_btn_future_en">Future Plan</string>
    <string name="act_main_btn_settings">User Settings</string>
    <string name="act_main_btn_settings_en">User Settings</string>
    <string name="act_settings_txtvw_regularRcd">Timely Record</string>
    <string name="act_settings_txtvw_interval">Time Interval</string>
    <string name="act_settings_txtvw_time">Minutes</string>
    <string name="act_settings_txtvw_initInterval">30</string>
    <string name="act_settings_dlg_interval_title">Please input an integer between 1~300</string>
    <string name="act_settings_dlg_posBtn">OK</string>
    <string name="act_settings_dlg_negBtn">CANCLE</string>
    <string name="act_settings_txtvw_started">Whether Turn On</string>
    <string name="act_settings_btn_closeLog">Turn Off Timely Record</string>
    <string name="act_settings_txtvw_closed">Timely record is off now</string>
    <string name="act_settings_txtvw_closed_en">Timely record is off now</string>
    <string name="act_settings_btn_startLog">Turn On Timely Record</string>
    <string name="act_settings_txtvw_rcdAlarm">Event Alarm Type</string>
    <string name="act_settings_txtvw_ringtone">Ring</string>
    <string name="act_settings_txtvw_vibration">Vibration</string>
    <string name="act_settings_btn_interval">Set Interval</string>
    <string name="act_settings_toast_ringOn">Ring alarm is on now</string>
    <string name="act_settings_toast_ringOff">Ring alarm is off now</string>
    <string name="act_settings_toast_vibrationOn">Vibration is on now</string>
    <string name="act_settings_toast_vibrationOff">Vibration is off now</string>
    <string name="act_settings_toast_rglRcdOn">Timely reminder is on now</string>
    <string name="act_settings_toast_rglRcdOff">Timely reminder is off now</string>
    <string name="act_settings_toast_rglRcdOff_en">Timely reminder is off now</string>
    <string name="act_settings_toast_intervalChanged">Time interval changed, counter will start over</string>
    <string name="act_settings_toast_intervalFailed">Timelyr record is off, time interval has been changed</string>
    <string name="act_settings_set_type_items">Set Type Items</string>
    <string name="act_youRcrd_btn_save">Save</string>
    <string name="act_youRcrd_txtvw_mood">Mood</string>
    <string name="act_youRcrd_txtvw_effc">Efficiency</string>
    <string name="act_youRcrd_txtvw_type">Choose Type</string>
    <string name="act_youRcrd_txtvw_selfrating">Self Evaluation</string>
    <string name="act_youRcrd_txtvw_finish">I am done</string>
    
    <string name="act_current_btn_adjustMood">Make me happy</string>
    <string name="act_current_txtvw_logStarted">Next Record Time: </string>
    <string name="act_current_txtvw_logStopped">Timely Record Off</string>
    <string name="act_current_txtvw_nextLogTime">00：00</string>
    <string name="act_current_btn_logStart">Turn On Timely Record</string>
    <string name="act_current_btn_logStop">Turn Off Timely Record</string>
    <string name="act_current_btn_startToDo">Start Record</string>
    <string name="act_current_btn_iWantToRcd">Make a record Now</string>
    <string name="act_current_btn_history">View History Record</string>
    <string name="act_current_btn_future">Plan Future Time</string>
    <string name="act_current_btn_back">Back</string>
    <string name="act_curr_txtvw_title">Current Me</string>
    <string name="act_iRcd_txtview_title">I want to record</string>
    <string name="act_happy_txtvw_titile">Be Happy</string>
    <string name="str_act_dosth_txtvw_title">Start focus</string>
    <string name="act_cloud_sync_test_user_register">User Register</string>
    <string name="act_cloud_sync_test_user_login">User Log In</string>
    <string name="act_cloud_sync_test_user_logout">User Log Out</string>
    <string name="act_cloud_sync_test_userprofile_push">User Data Push</string>
    <string name="act_cloud_sync_test_userprofile_pull">User Data Pull</string>
    <string name="act_cloud_sync_test_todolist_push">Todolist Push</string>
    <string name="act_cloud_sync_test_todolist_pull">Todolist Pull</string>
    <string name="act_cloud_sync_test_get_time_tip">Get Time Tips</string>
    <string name="act_cloud_sync_test_status_defined">View Predefined Status</string>
    <string name="act_main_cloud_sync_test">Cloud Sync Test</string>
    <string name="act_cloud_sync_test_check_network">Check Network Access</string>
    <string name="btn_achartengine_test">Chart Engine Test</string>
	<string name="act_iRcd_txt_startTitle">Start Time</string>
    <string name="act_iRcd_txt_endTitle">End Time</string>
    <string name="act_iRcd_txt_startTime">00：00</string>
    <string name="act_iRcd_txt_endTime">00：00</string>
    <string name="act_iRcd_btn_setTime">Set</string>
    <string name="act_iRcd_btn_titleTime">Start and End Time</string>
    <string name="str_act_dosth_txt_time">  00 : 00 : 00  </string>
    <string name="str_act_dosth_btn_start">Start</string>
    <string name="str_act_dosth_btn_complete">Done</string>
    <string name="act_regst_txtvw_name">Username</string>
    <string name="act_regst_txtvw_pswd1">Password</string>
    <string name="act_regst_txtvw_pswd2">Check Password</string>
    <string name="act_regst_txtvw_email">Email</string>
    <string name="act_regst_btn_register">Register</string>
    <string name="act_regst_btn_back">BAck</string>
    <string name="act_login_txtvw_name">Email</string>
    <string name="act_login_txtvw_pswd">Password</string>
    <string name="act_login_txtvw_remember">Remember Password</string>
    <string name="act_login_txtvw_autolog">Auto Login</string>
    <string name="context_generic">This is a context!</string>
    <string name="act_tomorrow_plan_tomorrow_event">Tomorrow Items</string>
    <string name="act_tomorrow_plan_todo_event">Todo Items</string>
    <string name="act_prim_types_title">User Defined Types</string>
    <string name="act_prim_types_add">Add</string>
    <string name="act_prim_types_back">Back</string>
    <string name="act_prim_types_newType">Please input new prime type name</string>
    <string name="act_prim_types_remove">Delete this type will delete all its sub types, are you sure to go on?</string>
    <string name="act_prim_types_whatToDo">Please select the operation</string>
    <string name="act_prim_types_btn_remove">Delete</string>
    <string name="act_prim_types_btn_edit">Edit</string>
    <string name="act_prim_types_alreadyExist">This type name already exists, please try another one</string>
    <string name="act_prim_types_tableEmpty">Type list can not be emply, automatically add an "others" item for you</string>
    <string name="act_sub_types_title">Sub Type</string>
    <string name="act_sub_types_add">Add</string>
    <string name="act_sub_types_back">Back</string>
    <string name="act_sub_types_whatToDo">Please select the operation</string>
    <string name="act_sub_types_newType">Please input new sub type name</string>
    <string name="act_sub_types_moveTo">Please choose the prime type</string>
    <string name="act_sub_types_remove">Are you sure to delete?</string>
    <string name="act_sub_types_btn_remove">Delete</string>
    <string name="act_sub_types_btn_edit">Edit</string>
    <string name="act_sub_types_btn_moveto">MoveTo</string>
    <string name="act_sub_types_alreadyExist">This type name already exists, please try another one</string>
    <string name="act_sub_types_tableEmpty">Type list can not be emply, automatically add an "others" item for you</string>
    <string name="is_logining_in">Loging In</string>
    <string name="is_registering">Registering</string>
    <string name="is_logingout">Loging Out</string>
    <string name="login_http_error">Http Error, please retry!</string>
    <string name="splash">Splash</string>
    <string name="switch_user">Switch User</string>
    <string name="user_data_sync">Sync Data</string>
    <string name="current_loged_in_user">Current Loged In User: </string>
    <string name="loged_in_user_indicator">No User!</string>
    <string name="sync_data">Sync User Data</string>
    <string name="please_login_first">Please Log In First!</string>
    <string name="subtype_others_cn">Others</string>
    <string name="success_log_in_with_offline">Log in successfully, you are in off-line mode now!</string>
    <string name="success_log_out_with_offline">Successfully log out from off-line mode!</string>
    <string name="login_http_error_and_no_user_found">Http error, no user record found, please register and login first!</string>
    <string name="back_generic_en">Back</string>
    <string name="suggestion_generic_en">Suggestion</string>
    <string name="syncing_data_in_background_en">Now Starting Sync Data In Background</string>
    <string name="already_login_en">You have already loged in!</string>
     <string name="is_logining_in_en">Loging In</string>
    <string name="is_registering_en">Registering</string>
    <string name="is_logingout_en">Loging Out</string>
    <string name="login_http_error_en">Http Error, please retry!</string>
     <string name="switch_user_en">Switch User</string>
    <string name="user_data_sync_en">Sync Data</string>
    <string name="current_loged_in_user_en">Current Loged In User: </string>
    <string name="loged_in_user_indicator_en">No User!</string>
    <string name="sync_data_en">Sync User Data</string>
    <string name="please_login_first_en">Please Log In First!</string>
    <string name="subtype_others_en">Others</string>
    <string name="success_log_in_with_offline_en">Log in successfully, you are in off-line mode now!</string>
    <string name="success_log_out_with_offline_en">Successfully log out from off-line mode!</string>
    <string name="login_http_error_and_no_user_found_en">Http error, no user record found, please register and login first!</string>
</resources>