<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/current_bg">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_gravity="center_horizontal">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:background="@drawable/status_bar"
            android:orientation="vertical" 
            android:layout_gravity="center_vertical">

            <Button
                android:id="@+id/Button01"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_gravity="left|center_vertical"
                android:text="@string/act_sub_types_back"
                android:textSize="13sp"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button1"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_gravity="right|center_vertical"
                android:text="@string/act_sub_types_add"
                android:textSize="13sp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/act_sub_types_title"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </FrameLayout>
           
    	<ListView
        	android:id="@+id/act_subTypes_lstvw_subTypes"
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:layout_alignParentLeft="true"
        	android:layout_below="@+id/linearLayout1"
        	android:layout_marginLeft="5dp" 
        	android:layout_marginRight="5dp" >
    	</ListView>
    	
    </LinearLayout>

</RelativeLayout>